Fixes an issue with the portrait shifting the next title

--- a/assets/sass/atoms/_entry-titles.scss
+++ b/assets/sass/atoms/_entry-titles.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 header.entry-title{
+  clear: both;
 	h1{
 		font-size: 46px;
     @media only screen and (max-width: $screen-xs-max) {
